# intro2musictech

./: .gitignore  00-Hello.ipynb  CLAUDE.md  INFO-ResearchGroups.md  MIR-01.ipynb  MIR-02_1.ipynb  MIR-02_2.ipynb  MIR-02_3.ipynb  MIR-02_4.ipynb  MIR-CC.html  MIR-CC.py  README.md  index.html  pyproject.toml  requirements.txt
.github/: dependabot.yml
__marimo__/session/: MIR-CC.py.json
articles/: accessible-instruments.html  ai-music-discovery.html  ai-paper-reader.html  audio-embedding.html  audio-feature-frequency.html  audio-feature-musical.html  audio-feature-overview.html  audio-feature-time.html  audio-feature-tools.html  audio-fingerprint.html  audio-music-tech-book.html  audio-preprocessing.html  bela-everyday-objects.html  c4dm-icassp2019.html  c4dm-phd.html  claude-code-mir.html  conferences-journals.html  intro-music-tech.html  mir-tech-stack.html  music-copyright.html  music-genre.html  music-language-tutorial.html  music-recommendation.html  music-tech-2018.html  music-tech-2019.html  music-tech-2020.html  music-visualization.html  piano-complexity.html  podcast-ep7.html  readme-intro.html  research-groups.html  setup-environment.html
attachment/: mir01-midi.mid
music-language-tutorial/: .buildinfo  .gitignore  _config.yml  _toc.yml  bibliography.html  genindex.html  intro.html  intro.md  objects.inv  references.bib  requirements.txt  search.html  searchindex.js
music-language-tutorial/conclusion/: beyondaudio.html  beyondtext.html  intro.html  intro.md
music-language-tutorial/description/: code.html  code.ipynb  evaluation.html  intro.html  (+3 more)
(+39 files in other folders)
