[project]
name = "intro2musictech"
version = "0.1.0"
description = "Educational Jupyter Notebook tutorials on Music Information Retrieval and music technology fundamentals"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.10",
    "matplotlib>=3.5",
    "librosa>=0.10",
    "scikit-learn>=1.1",
    "mido>=1.3",
    "pretty-midi>=0.2.10",
]

[dependency-groups]
dev = [
    "jupyter",
]
